--- a/src/readings/index.liquid
+++ b/src/readings/index.liquid
@@ -9,14 +9,13 @@ eleventyExcludeFromCollections: true
 	<p>
 		Readings will be dispersed throughout the semester to inform and contextualize our work with each project. Be prepared to respond, raise questions, and discuss the text during class.
 	</p>
-	<section class="link-list">
-	{% assign readings = collections.reading | reverse %}
+	<section class="reading-list">
+	{% assign readings = collections.reading %}
 	{% for r in readings %}
-		<a href="{{r.data.link}}" target="_blank" class="link-button">
-			<div class="reading">
-				<div class="meta">Reading {{ forloop.length | minus:forloop.index0 }}</div>
-				{{r.data.author}}: {{r.data.title}}
-			</div>
+		<a href="{{r.data.link}}" target="_blank" class="reading">
+			<div class="label">Reading {{ forloop.index }}</div>
+			<div class="title"> {{r.data.title}}</div>
+			<div class="author">{{r.data.author}}</div>
 		</a>
 	{% endfor %}
 	</section>
