--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,6 +3,10 @@
   font-family: "CaperVF";
   src: url("/assets/fonts/CaperVF.woff2");
 }
+@font-face {
+  font-family: "IBMPlexMono";
+  src: url("/assets/fonts/IBMPlexMono-Text.woff2");
+}
 * {
   margin: 0;
   padding: 0;
@@ -14,11 +18,11 @@
 BASICS
 -------------------*/
 :root {
-  --maincolor: rgb(20 0 255);
-  --secondcolor: rgb(35 100 20);
-  --thirdcolor: rgb(255 55 0);
-  --code-bgcolor: rgb(255 236 212);
-  --grey: rgb(255 255 255);
+  --maincolor: rgb(17 29 72);
+  --secondcolor: rgb(250 90 75);
+  --thirdcolor: rgb(60 100 245);
+  --code-bgcolor: rgb(255 255 215);
+  --grey: rgb(251 251 255);
   --dark-grey: rgb(150 150 150);
   --wght: 400;
   --wdth: 20;
@@ -28,6 +32,7 @@ BASICS
   --ss03: 1;
   --maxwidth: 80%;
   --margin: calc( ( 100vw - var(--maxwidth) )*0.5 );
+  --pad-large: 4rem;
   --pad: 2rem;
   --pad-medium: 1rem;
   --pad-small: 0.5rem;
@@ -65,7 +70,11 @@ TYPOGRAPHY
 -------------------*/
 body {
   font-family: "CaperVF";
+  font-size: 1.2rem;
+  --wght: 400;
+  --wdth: 20;
   letter-spacing: 0.01em;
+  line-height: 1.3;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -105,7 +114,6 @@ h2 {
 
 h3 {
   --wght: 600;
-  margin-top: 1.5em;
   font-size: var(--base);
 }
 
@@ -115,12 +123,27 @@ h4, h5 {
   font-size: 1rem;
 }
 
+article h2 {
+  margin-top: var(--pad);
+}
+article h3 {
+  margin-top: var(--pad-medium);
+  margin-left: var(--pad);
+}
+article li {
+  --wght: 470;
+  letter-spacing: 0.03em;
+  font-size: 1rem;
+}
+article p + p {
+  text-indent: var(--pad);
+}
+
 h2, h3, h4, p, ul, ol, pre, table {
   max-width: 840px;
 }
 
 p {
-  margin-bottom: 1rem;
   letter-spacing: 0.02em;
 }
 
@@ -141,12 +164,7 @@ strong {
 
 em {
   font-style: normal;
-}
-em::before {
-  content: "*";
-}
-em::after {
-  content: "*";
+  --wght: 700;
 }
 
 blockquote {
@@ -156,8 +174,7 @@ blockquote {
   --wdth: 10;
   color: var(--secondcolor);
   max-width: 30em;
-  text-indent: -0.5em;
-  margin-top: 0.5em;
+  text-indent: -0.4em;
   color: var(--secondcolor);
 }
 
@@ -172,9 +189,8 @@ pre {
 
 code {
   letter-spacing: 0;
-  font-family: "Caper";
-  --wdth: 75;
-  letter-spacing: 1px;
+  font-family: "IBMPlexMono", monospace;
+  font-size: 0.9em;
   font-style: normal;
   background: var(--code-bgcolor);
 }
@@ -194,20 +210,20 @@ code .attr-name {
   color: #afa050;
 }
 
-p code {
-  font-size: 0.95em;
-}
-
 /*------------------
-HEADER
+HEADER and NAV
 -------------------*/
 nav .home {
-  display: block;
-  padding-top: var(--pad-medium);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   --wght: 800;
-  height: 80px;
+}
+nav .top-nav {
+  padding-top: var(--pad-medium);
+  display: flex;
+}
+nav .top-nav a {
+  margin-right: var(--pad);
 }
 nav .nav-links {
   display: none;
@@ -239,23 +255,20 @@ nav .nav-links .meta {
 nav.open .nav-links {
   display: block;
 }
-nav.open .menu-icon {
+nav.open #menu-icon {
   color: white;
 }
 
-.menu-icon {
+#menu-icon {
   position: fixed;
   right: 30px;
   top: 0;
   z-index: 250;
   width: 50px;
   padding: 10px 15px;
-  --wght: 350;
-  --wdth: 150;
   font-size: 30px;
-  letter-spacing: -8px;
 }
-.menu-icon:hover {
+#menu-icon:hover {
   cursor: pointer;
   color: var(--thirdcolor);
 }
@@ -277,24 +290,17 @@ footer {
 }
 
 main {
-  padding: 4rem 0 4rem;
+  padding: var(--pad-large) 0 var(--pad-large);
   min-height: calc(100vh - var(--footerheight) - var(--menuheight));
 }
 
 section {
-  margin-bottom: 4rem;
+  margin: var(--pad) 0 var(--pad-large);
 }
 
-.default article {
-  margin-left: 25%;
-}
-
-article h2 {
-  color: var(--secondcolor);
-  border-top: 2px solid;
-  padding-top: 0.5em;
-  margin-top: 2em;
-  margin-bottom: 1.5em;
+.grid, .row, dt, .reading {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 /*------------------
@@ -304,20 +310,6 @@ ul {
   list-style-type: none;
 }
 
-.content ul, .content ol, .content pre {
-  margin-bottom: 1em;
-}
-.content li ul {
-  margin-top: 0;
-  margin-left: var(--pad);
-  margin-bottom: 0;
-}
-.content li p {
-  display: inline;
-}
-.content li time + p {
-  display: block;
-}
 .content ul li {
   list-style-type: none;
   text-indent: -1.2em;
@@ -334,10 +326,10 @@ ul {
 }
 
 /*------------------
-HOME INDEX
+HOMEPAGE INDEX
 -------------------*/
 .index dt {
-  border-bottom-width: 2px;
+  border-bottom: 0;
 }
 .index dd {
   display: block;
@@ -348,12 +340,17 @@ HOME INDEX
   text-transform: none;
   --wght: 120;
   text-indent: -0.1em;
+  --wght: 800;
   max-width: none;
   line-height: 0.9;
   margin-bottom: 15px;
 }
-.index h4 {
-  font-size: var(--base);
+.index .row, .index h4 {
+  font-size: 1.2rem;
+  --wght: 400;
+  --wdth: 20;
+  letter-spacing: 0.01em;
+  line-height: 1.3;
 }
 .index time {
   display: inline-block;
@@ -371,6 +368,20 @@ HOME INDEX
 }
 .index .unit, .index .title {
   display: none;
+}
+
+.reading {
+  padding: var(--pad-small) 0;
+  border-bottom: 1px dotted var(--maincolor);
+}
+.reading:last-child {
+  border-bottom: 0;
+}
+.reading .title {
+  grid-column: 2/5;
+}
+.reading .author {
+  grid-column: 5/-1;
 }
 
 .link-list {
@@ -477,8 +488,6 @@ dt {
   color: var(--secondcolor);
   margin: 2em 0 0;
   border-bottom: 1px solid;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
 }
 dt:hover {
   cursor: pointer;
@@ -501,13 +510,17 @@ dd {
 }
 
 .row {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  border-bottom: 1px dotted var(--maincolor);
   padding: var(--pad-small) 0;
+  border-bottom: 1px dotted var(--maincolor);
   --wght: 470;
   letter-spacing: 0.03em;
   font-size: 1rem;
+}
+.row:last-child {
+  border-bottom: 0;
+}
+.row p {
+  margin-bottom: 0;
 }
 
 .day {
@@ -553,9 +566,8 @@ th, td {
 }
 
 .element {
-  font-family: "Caper";
-  --wdth: 75;
-  letter-spacing: 1px;
+  font-family: "IBMPlexMono", monospace;
+  font-size: 0.9em;
   position: absolute;
   color: var(--thirdcolor);
   background: var(--code-bgcolor);
@@ -694,13 +706,11 @@ RESOURCES
 /*------------------
 GLOSSARY
 -------------------*/
-.terms article {
-  margin-left: 25%;
+#glossary p {
+  margin-top: var(--pad-medium);
+  text-indent: 0;
 }
-.terms p {
-  margin-top: 2em;
-}
-.terms h2 + p {
+#glossary h2 + p {
   margin-top: 0;
 }
 
@@ -760,11 +770,32 @@ body.dark .element {
 /*------------------
 DIAGRAMS
 -------------------*/
+p + pre {
+  margin-top: var(--pad-medium);
+}
+
 .diagram {
   border: 1px dotted var(--secondcolor);
   padding: 1em;
-  margin-bottom: 1em;
+  margin: var(--pad);
   position: relative;
+}
+.diagram h1, .diagram p, .diagram em {
+  font-size: 16px;
+  text-transform: none;
+  font-family: serif;
+  color: var(--maincolor);
+  text-indent: 0;
+}
+.diagram h1 {
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+.diagram p {
+  margin-bottom: 1em;
+}
+.diagram em {
+  font-style: italic;
 }
 
 .line {
@@ -957,6 +988,7 @@ MEDIA QUERIES
   }
 }
 .note {
+  margin-top: var(--pad);
   --wght: 470;
   letter-spacing: 0.03em;
   font-size: 1rem;
