--- a/src/_layouts/partials/footer.html
+++ b/src/_layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	<ul>
-		<li>Core 2 Interaction Studio (PUCD 2125)</li>
-		<li>Tuesdays and Thursdays 7:00pm–9:40pm, DC 407</li>
+		<li>Core 2 Interaction Studio (PUCD 2125) Section F, CRN 2726</li>
+		<li>Tuesdays and Thursdays 7:00pm–9:40pm</li>
 	</ul>
 </footer>
