--- a/src/_layouts/partials/header.liquid
+++ b/src/_layouts/partials/header.liquid
@@ -1,13 +1,21 @@
 <header>
-	<nav>
-		<a href="/" class="home">Core 2 Interaction</a>
-		<div class="menu-icon">≡≡</div>
+	<nav id="main-nav">
+		<div class="top-nav">
+			<a href="/" class="home">Core 2 Interaction</a>
+			<a href="/syllabus/">syllabus</a>
+			<a href="/schedule/">schedule</a>
+			<a href="/projects/">projects</a>
+			<a href="/readings/">readings</a>
+			<a href="/resources/">resources</a>
+			<a href="/colophon/">colophon</a>
+		</div>
+		
+		<div id="menu-icon">≡</div>
 		<div class="nav-links">			
 			<a href="/">Core 2 Interaction</a>
 			<a href="/syllabus/">syllabus</a>
 			<a href="/schedule/">schedule</a>
 			<a href="/projects/">projects</a>
-			<a href="/exercises/">exercises</a>
 			<a href="/readings/">readings</a>
 			<a href="/resources/">resources</a>
 			<a href="/colophon/">colophon</a>
@@ -16,10 +24,8 @@
 			<br>
 			<div class="meta">Quick links</div>
 			<a href="https://risd.zoom.us/j/97883162532" target="_blank">zoom</a>
-			<a href="https://docs.google.com/spreadsheets/d/1pCrREKrOvXLRe-MtiWhGrCLuv4MRFct_YnuBqMec8KI/edit#gid=0" target="_blank">office hours</a>
-			<a href="https://docs.google.com/spreadsheets/d/1QXocofQNNG38kJWQWjjZe7wv4ikc8Ffnzg_6qoxGSqY/edit#gid=934689056" target="_blank">presentations</a>
-			<a href="https://github.com/risd-web/webtype-demos" target="_blank">demos repository</a>
-			<a href="https://risd.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx#folderID=fe7e0ae6-604e-44ec-a7d7-ae3f0033a340" target="_blank">tutorial videos</a>	
+			<a href="https://core2interact-mra3434.slack.com" target="_blank">Slack</a>
+			<a href="https://vimeo.com/user/11664633/folder/3213480" target="_blank">CD Videos</a>
 			<a href="https://drive.google.com/drive/folders/1f21gsrM7leOLwqET_ZrsLhG3KTlqQzBA?usp=sharing" target="_blank">technical slides</a>	
 		</div>
 	</nav>
