--- a/src/_layouts/syllabus.liquid
+++ b/src/_layouts/syllabus.liquid
@@ -2,10 +2,7 @@
 layout: default.liquid
 ---
 
-<article class="content">
-
-	<blockquote class="quote">“In today’s highly commercialised web of multinational corporations, proprietary applications, read-only devices, search algorithms, Content Management Systems, WYSIWYG editors, and digital publishers it becomes an increasingly radical act to hand-code and self-publish experimental web art and writing projects.” <br>—J.R. Carpenter</blockquote>
-
+<article>
 	<h1>{{ title }}</h1>
 	{{ content }}
 </article>
