--- a/src/_layouts/partials/header.liquid
+++ b/src/_layouts/partials/header.liquid
@@ -1,4 +1,4 @@
-<header>
+<header class="container">
 	<nav id="main-nav">
 		<div class="top-nav">
 			<a href="/" class="home">Core 2 Interaction</a>
@@ -10,7 +10,11 @@
 			<a href="/colophon/">colophon</a>
 		</div>
 		
-		<div id="menu-icon">≡</div>
+		<div id="menu-icon">
+			<div class="menu-line"></div>
+			<div class="menu-line"></div>
+			<div class="menu-line"></div>
+		</div>
 		<div class="nav-links">			
 			<a href="/">Core 2 Interaction</a>
 			<a href="/syllabus/">syllabus</a>
@@ -26,7 +30,7 @@
 			<a href="https://risd.zoom.us/j/97883162532" target="_blank">zoom</a>
 			<a href="https://core2interact-mra3434.slack.com" target="_blank">Slack</a>
 			<a href="https://vimeo.com/user/11664633/folder/3213480" target="_blank">CD Videos</a>
-			<a href="https://drive.google.com/drive/folders/1f21gsrM7leOLwqET_ZrsLhG3KTlqQzBA?usp=sharing" target="_blank">technical slides</a>	
+			<a href="https://drive.google.com/drive/folders/12A5-6IGCl98XmSGr3smLHJgyabwMnLvU?usp=sharing" target="_blank">technical slides</a>	
 		</div>
 	</nav>
 </header>
