--- a/src/_layouts/syllabus.liquid
+++ b/src/_layouts/syllabus.liquid
@@ -3,11 +3,11 @@ layout: default.liquid
 ---
 
 <article>
-	<h1>{{ title }}</h1>
+	<h1><span class="print">Core 2 Interaction </span>{{ title }}</h1>
 	{{ content }}
 </article>
 
-<div class="schedule">
+<div class="schedule print">
 	<h1>Schedule</h1>
 	<ul class="index-list">
 		{% assign weeks = collections.schedule %}
