--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -94,7 +94,7 @@ a:hover{
 	font-size: var(--base);
   --wght: 400;
   --wdth: 20;
-  letter-spacing: 0.01em;
+  letter-spacing: 0.02em;
   line-height: 1.3;
 }
 
@@ -115,7 +115,7 @@ a:hover{
 
 @mixin rowborder{
 	padding: var(--pad-small) 0;
-	border-bottom: 1px dotted var(--maincolor);
+	border-bottom: 1px solid var(--maincolor);
 	&:last-child{
 		border-bottom: 0;
 	}
@@ -174,6 +174,9 @@ article {
 		margin-top: var(--pad-medium);
 		margin-left: var(--pad);
 	}
+	table+h3{
+		margin-top: var(--pad);
+	}
 	h4{
 		margin-top: var(--pad-medium);
 	}
@@ -192,18 +195,21 @@ article {
 	// ul, ol{
 	// 	padding-left: var(--pad);
 	// }
-
 }
 h2, h3, h4, p, ul, ol, pre, table{
 	max-width: 840px;
 }
-p{
-	letter-spacing: 0.02em;
-}
+
 p a, li a{
 	&::after{
 		content: '→';		
 	}
+}
+
+.note{
+	margin-top: var(--pad);
+	@include smalltext;
+	background: var(--code-bgcolor);
 }
 /*------------------
 LISTS
@@ -457,71 +463,6 @@ HOMEPAGE INDEX
 	}
 }
 
-/*------------------
-SYLLABUS
--------------------*/
-#eval td:first-child, #eval th:first-child{
-	width: 80px;
-}
-
-#syllabus {
-	.schedule{
-		display: none;
-	}
-
-}
-
-@media print{
-	#syllabus {
-		color: black;
-		border-bottom-color: black;
-		max-width: 70%;
-		margin-left: 20%;
-		font-size: 9pt;
-		// ul{
-		// 	page-break-inside: avoid;
-		// }
-		h1{
-			page-break-before: always;
-		}
-		h1, h2,h3{
-			page-break-after: avoid;
-		}
-		h2{
-			margin-top: 5px;
-		}
-		h2, time, .mode{
-			font-size: 10pt;
-		}
-		article h2{
-			margin-top: 2rem;
-			margin-bottom: 1rem;
-		}
-		.content .index-list .row{
-			border-bottom: 0;
-		}
-
-		th,td{
-			border-color: black;
-		}
-		h1,h2,h3,h4,h5,a{
-			color: black;
-		}
-		main{
-			padding-top: 0;
-		}
-		h3{
-			padding-left: 0;
-			font-size: 10pt;
-		}
-
-		.schedule{
-			display: block;
-		}
-	}	
-}
-
-
 
 /*------------------
 SCHEDULE
@@ -600,7 +541,9 @@ dd {
 
 // table styles
 table{
-	margin-bottom: 1rem;
+	margin-top: var(--pad);
+	width: 100%;
+	border-collapse: collapse;
 }
 th{
 	@include heading;
@@ -609,11 +552,21 @@ th{
 }
 th, td{
 	@include smalltext;
-	padding: .5em 1em .5em 0;
+	padding: var(--pad-small) var(--pad-small) 0 0;
 	box-sizing: border-box;
 	vertical-align: top;
-	border-bottom: 1px dotted var(--maincolor);
 }
+td:first-child, th:first-child{
+	width: 20%;
+}
+td:last-child, th:last-child{
+	width: 30px;
+	text-align: right;
+}
+th{
+	border-bottom: 1px solid var(--maincolor);
+}
+
 .content td ul{
 	padding-left: 0;
 	margin-bottom: 0;
@@ -727,7 +680,7 @@ RESOURCES
 		top: 6em;
 		right: 0;
 		width: 250px;
-		border-left: 1px dotted var(--thirdcolor);
+		border-left: 1px solid var(--thirdcolor);
 		padding-left: var(--pad);
 		margin-left: var(--pad);
 		.notes a{
@@ -782,7 +735,8 @@ FOOTER
 
 footer{
 	@include heading;
-	@include smalltext;
+	--wght: 600;
+	font-size: .8rem;
 	border-top: 1px solid;
 	padding-top: .5rem;
 	height: var(--footerheight);
@@ -842,7 +796,7 @@ p+pre{
 	margin-top: var(--pad-medium);
 }
 .diagram {
-	border: 1px dotted var(--secondcolor);
+	border: 1px solid var(--secondcolor);
 	padding: 1em;
 	margin: var(--pad);
 	position: relative;
@@ -887,9 +841,9 @@ p+pre{
 	margin-bottom: .5em;
 }
 
-.dotted{
+.solid{
 	background: transparent;
-	border: 1px dotted var(--thirdcolor);
+	border: 1px solid var(--thirdcolor);
 }
 .marked{
 	background: var(--thirdcolor);
@@ -1000,7 +954,7 @@ MEDIA QUERIES
 			position: static;
 	    width: 100%;
 	    border: 0;
-	    border-top: 2px dotted;
+	    border-top: 2px solid;
 	    padding: var(--pad) 0;
 		}
 		article{
@@ -1010,40 +964,70 @@ MEDIA QUERIES
 
 }
 
-@media print{
 
+.print{
+	display: none;
+}
+@media print{
+	.print{
+		display: block;
+	}
+	:root{
+		--pad: 1.5rem;
+		--pad-small: 0.3rem;
+		--pad-medium: 1rem;
+		--pad-large: 2rem;
+		font-size: 15px;
+	}
 	header{
 		display: none;
 	}
 	body{
 		font-size: 15px;
-		line-height: 1.5;
+		color: black;
 	}
 	.container{
 		max-width: 100%;
 	}
 	main{
-		margin-left: 0;
-		// columns: 2 auto;
+		margin-left: 20vw;
 	}
-	time + ul{
-		margin-top: 1em;
+	h1,h2,h3,h4,p,ol,ul,dt,dd, time,a{
+		color: black;
+		font-size: 1rem;
+	}
+
+	blockquote p{
+		display: none;
+	}
+	td{
+		font-size: 0.85rem;
+		padding-bottom: 0;
+	}
+	dt {
+		h2, div{
+			font-size: 0.85rem;
+		}
+	}
+	.row{
+		p, h4, ul, time, a{
+			font-size: 0.85rem;
+		}
+	}
+
+	h1{
+		page-break-before: always;
+	}
+	h1, h2, h3, h4{
+		page-break-after: avoid;
+	}
+
+	time{
+		--wght: 700;
 	}
 
 	article{
-
 		padding: 0;
-		// h1{
-		// 	margin-top: 0;
-		// }
-
-		h2{
-			margin-top: 1.5em;
-		}
-		h2, h3, h4, time { 
-			page-break-after: avoid;
-			break-after: avoid;
-		}
 		table{
 			// -webkit-column-break-inside: avoid;
 			// page-break-inside: avoid;
@@ -1061,9 +1045,5 @@ MEDIA QUERIES
 	aside{
 		display: none;
 	}
-}
-.note{
-	margin-top: var(--pad);
-	@include smalltext;
-	background: var(--code-bgcolor);
+
 }
