--- a/src/_layouts/partials/week.liquid
+++ b/src/_layouts/partials/week.liquid
@@ -1,9 +1,9 @@
-<dt class="content-dropdown">
+<dt class="dropdown-title">
 	<h2 class="week-title">Week {{ w.data.week }}</h2>	
 	<div class="unit">Unit {{ w.data.unit }}: {{units[w.data.unit]}}</div>
 	<div class="phase"> {{ w.data.title }}</div>
 </dt>
-<dd class="content week" id="week-{{ w.data.week }}">
+<dd class="dropdown-content week" id="week-{{ w.data.week }}">
 	<div class="assignments">
 		<div class="row class">
 			<h4>Class</h4>
