--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -231,7 +231,7 @@ ul li{
 }
 
 strong {
-	weight: normal;
+	font-weight: normal;
 	--wght: 700;
 	white-space: nowrap;
 }
@@ -487,7 +487,7 @@ time{
 
 }
 
-dt {
+.dropdown-title {
 	color: var(--secondcolor);
 	margin: 2em 0 0;
 	border-bottom: 1px solid;
@@ -504,11 +504,11 @@ dt {
 	grid-column: 4/-1;
 }
 
-dd {
+.dropdown-content {
 	display: none;
 }
 
-.accordion.open dd{
+.accordion.open .dropdown-content{
 	display: block;
 }
 
@@ -539,6 +539,17 @@ dd {
 	grid-column: 2 / -1;
 }
 
+
+/*------------------
+SYLLABUS
+-------------------*/
+
+dl{
+	display: grid;
+	grid-template-columns: 150px auto;
+	padding-left: var(--pad);
+	@include smalltext;
+}
 // table styles
 table{
 	margin-top: var(--pad);
